I made the video on the homepage 100% width instead of 100vh width to prevent a horizontal scrollbar

--- a/home.css
+++ b/home.css
@@ -6,7 +6,7 @@
 .hero {
     position: relative;
     background-color: #000; /* Fallback if video doesn't load */
-    width: 100vw; /* Full width of the viewport */
+    width: 100%; /* I made it 100% instead of 100vh so it doesn't include a horizontal scrollbar*/
     height: 100vh; /* Full height of the viewport */
     display: flex;
     justify-content: center;
