--- a/nav_bar.css
+++ b/nav_bar.css
@@ -12,7 +12,7 @@ body{
 nav{
     background: #3A6EA5;
     height: 80px;
-    width: 100vw;
+    width: 100%;
 }
 label.logo{
     color: white;
